[package]
name = "echo-audio-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
chrono = "0.4.24"
clap = { version = "4.2.4", features = ["derive"] }
futures-util = "0.3.28"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
teloxide = "0.12.2"
tokio = { version = "1.27.0", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
uuid = { version = "1.3.1", features = ["v4"] }
